--- a/src/main/resources/templates/index.handlebars
+++ b/src/main/resources/templates/index.handlebars
@@ -1,77 +1,78 @@
 {{> header.handlebars}}
 
 <body>
-
+{{> menu.handlebars}}
 <div class="container">
-    {{> menu.handlebars}}
+    <h1>The Hucktions</h1>
 
-    <div class="row">
-        <div class="col-6">
-            <h2>Add name</h2>
-            <form method="post" action="/person">
-                <div class="form-group">
-                    <label for="exampleInputEmail1">First name</label>
-                    <input type="text" class="form-control {{firstNameInvalid}}" name="firstName">
-                    <small id="emailHelp" class="form-text text-muted">What does your friends call you</small>
-                    <div id="emailHelp" class="invalid-feedback">
-                        Please provide a valid name.
-                    </div>
-                </div>
 
-                <div class="form-group">
-                    <label for="exampleInputEmail1">Last name</label>
-                    <input type="text" class="form-control" name="lastName">
-                    <small id="emailHelp" class="form-text text-muted">What is ths name after the name your friends
-                        called you.</small>
-                </div>
+    <!--    <div class="row">-->
+    <!--        <div class="col-6">-->
+    <!--            <h2>Add name</h2>-->
+    <!--            <form method="post" action="/person">-->
+    <!--                <div class="form-group">-->
+    <!--                    <label for="exampleInputEmail1">First name</label>-->
+    <!--                    <input type="text" class="form-control {{firstNameInvalid}}" name="firstName">-->
+    <!--                    <small id="emailHelp" class="form-text text-muted">What does your friends call you</small>-->
+    <!--                    <div id="emailHelp" class="invalid-feedback">-->
+    <!--                        Please provide a valid name.-->
+    <!--                    </div>-->
+    <!--                </div>-->
 
-                <div class="form-group">
-                    <label for="exampleInputEmail1">Email</label>
-                    <input type="email" class="form-control" name="email">
-                    <small id="emailHelp" class="form-text text-muted">Where do we email you.</small>
-                </div>
+    <!--                <div class="form-group">-->
+    <!--                    <label for="exampleInputEmail1">Last name</label>-->
+    <!--                    <input type="text" class="form-control" name="lastName">-->
+    <!--                    <small id="emailHelp" class="form-text text-muted">What is ths name after the name your friends-->
+    <!--                        called you.</small>-->
+    <!--                </div>-->
 
-                <button type="submit" class="btn btn-primary">Submit</button>
-            </form>
-        </div>
-        <div class="col-6">
-            <h2>Names</h2>
-            <table class="table">
-                <thead>
-                <tr>
-                    <th>First name</th>
-                    <th>Last name</th>
-                    <th>Email</th>
-                </tr>
-                </thead>
-                {{#each people}}
-                    <tr>
-                        <td>{{firstName}}</td>
-                        <td>{{lastName}}</td>
-                        <td>{{email}}</td>
-                    </tr>
-                {{/each}}
-            </table>
-        </div>
-    </div>
+    <!--                <div class="form-group">-->
+    <!--                    <label for="exampleInputEmail1">Email</label>-->
+    <!--                    <input type="email" class="form-control" name="email">-->
+    <!--                    <small id="emailHelp" class="form-text text-muted">Where do we email you.</small>-->
+    <!--                </div>-->
 
-    <hr>
+    <!--                <button type="submit" class="btn btn-primary">Submit</button>-->
+    <!--            </form>-->
+    <!--        </div>-->
+    <!--        <div class="col-6">-->
+    <!--            <h2>Names</h2>-->
+    <!--            <table class="table">-->
+    <!--                <thead>-->
+    <!--                <tr>-->
+    <!--                    <th>First name</th>-->
+    <!--                    <th>Last name</th>-->
+    <!--                    <th>Email</th>-->
+    <!--                </tr>-->
+    <!--                </thead>-->
+        <!--                {{#each people}}-->
+    <!--                    <tr>-->
+    <!--                        <td>{{firstName}}</td>-->
+    <!--                        <td>{{lastName}}</td>-->
+    <!--                        <td>{{email}}</td>-->
+    <!--                    </tr>-->
+        <!--                {{/each}}-->
+    <!--            </table>-->
+    <!--        </div>-->
+    <!--    </div>-->
 
-    {{> footer.handlebars}}
+    <!--    <hr>-->
 
-    <hr>
+    <!--    {{> footer.handlebars}}-->
 
-    <div class="row" >
+    <!--    <hr>-->
 
-        <div class="col-12" >
-            <h2>Links to UI libraries</h2>
-            <ul>
-                <li><a href="https://www.chartjs.org/"> chart.js </a></li>
-                <li><a href="https://getbootstrap.com/"> Bootstrap CSS </a></li>
-                <li><a href="https://getbootstrap.com/docs/4.5/examples/"> Bootstrap Templates </a></li>
-            </ul>
-        </div>
-    </div>
+    <!--    <div class="row" >-->
+
+    <!--        <div class="col-12" >-->
+    <!--            <h2>Links to UI libraries</h2>-->
+    <!--            <ul>-->
+    <!--                <li><a href="https://www.chartjs.org/"> chart.js </a></li>-->
+    <!--                <li><a href="https://getbootstrap.com/"> Bootstrap CSS </a></li>-->
+    <!--                <li><a href="https://getbootstrap.com/docs/4.5/examples/"> Bootstrap Templates </a></li>-->
+    <!--            </ul>-->
+    <!--        </div>-->
+    <!--    </div>-->
 
 </div>
 
