--- a/src/main/resources/templates/index.handlebars
+++ b/src/main/resources/templates/index.handlebars
@@ -2,9 +2,11 @@
 
 <body>
 {{> menu.handlebars}}
+
+<!--<body style="background-image: url('https://images.unsplash.com/photo-1502481686408-d428268c24ff?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60'); background-size: cover;">-->
+
 <div class="container">
     <h1>Dashboard</h1>
-
 
     <!--    <div class="row">-->
     <!--        <div class="col-6">-->
