--- a/src/main/resources/templates/menu.handlebars
+++ b/src/main/resources/templates/menu.handlebars
@@ -1,5 +1,9 @@
+
+<body>
+
+</body>
 <div class="row">
-    <div class="col-12">
+    <div class="col-12" >
         <header>
             <div class="collapse bg-dark" id="navbarHeader">
                 <div class="container">
