--- a/src/main/resources/templates/index.handlebars
+++ b/src/main/resources/templates/index.handlebars
@@ -1,80 +1,149 @@
 {{> header.handlebars}}
+<main role="main">
+    <div id="myCarousel" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+            <li data-target="#myCarousel" data-slide-to="1"></li>
+            <li data-target="#myCarousel" data-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img class="myImage" src="/images/carousel-1.jpg">
+                <div class="container">
+                    <div class="carousel-caption text-left">
+                        <h1>Example headline.</h1>
+                        <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta
+                            gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+                        <p><a class="btn btn-lg btn-primary" href="/fixtures" role="button">Upcoming Games</a></p>
+                    </div>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img class="myImage img-fluid" src="/images/carousel-2.jpg">
+                <div class="container">
+                    <div class="carousel-caption">
+                        <h1>Team Selection</h1>
+                        <p>Select Your team for next match</p>
+                        <p><a class="btn btn-lg btn-primary" href="/players" role="button">Select Squad</a></p>
+                    </div>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img class="myImage img-fluid" src="/images/carousel-3.jpg">
+                <div class="container">
+                    <div class="carousel-caption text-right">
+                        <h1>Squad Pictures</h1>
+                        <p><a class="btn btn-lg btn-primary" href="/gallery" role="button">View Gallery</a></p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
+    </div>
 
-<body>
-{{> menu.handlebars}}
-<div class="container">
-    <h1>Dashboard</h1>
+
+    <!-- Marketing messaging and featurettes
+    ================================================== -->
+    <!-- Wrap the rest of the page in another container to center all the content. -->
+
+    <div class="container marketing">
+
+        <!-- Three columns of text below the carousel -->
+        <div class="row">
+            <div class="col-lg-4">
+                <img class="myImage img-fluid" src="/images/soccer-stadium-1.jpg">
+                <h2>Heading</h2>
+                <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies
+                    vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo
+                    cursus magna.</p>
+                <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+            </div><!-- /.col-lg-4 -->
+            <div class="col-lg-4">
+                <img class="myImage img-fluid" src="/images/soccer-stadium-1.jpg">
+                <h2>Heading</h2>
+                <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras
+                    mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris
+                    condimentum nibh.</p>
+                <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+            </div><!-- /.col-lg-4 -->
+            <div class="col-lg-4">
+                <img class="myImage img-fluid" src="/images/soccer-stadium-1.jpg">
+                <h2>Heading</h2>
+                <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula
+                    porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh,
+                    ut fermentum massa justo sit amet risus.</p>
+                <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+            </div><!-- /.col-lg-4 -->
+        </div><!-- /.row -->
 
 
-    <!--    <div class="row">-->
-    <!--        <div class="col-6">-->
-    <!--            <h2>Add name</h2>-->
-    <!--            <form method="post" action="/person">-->
-    <!--                <div class="form-group">-->
-    <!--                    <label for="exampleInputEmail1">First name</label>-->
-    <!--                    <input type="text" class="form-control {{firstNameInvalid}}" name="firstName">-->
-    <!--                    <small id="emailHelp" class="form-text text-muted">What does your friends call you</small>-->
-    <!--                    <div id="emailHelp" class="invalid-feedback">-->
-    <!--                        Please provide a valid name.-->
-    <!--                    </div>-->
-    <!--                </div>-->
+        <!-- START THE FEATURETTES -->
 
-    <!--                <div class="form-group">-->
-    <!--                    <label for="exampleInputEmail1">Last name</label>-->
-    <!--                    <input type="text" class="form-control" name="lastName">-->
-    <!--                    <small id="emailHelp" class="form-text text-muted">What is ths name after the name your friends-->
-    <!--                        called you.</small>-->
-    <!--                </div>-->
+        <hr class="featurette-divider">
 
-    <!--                <div class="form-group">-->
-    <!--                    <label for="exampleInputEmail1">Email</label>-->
-    <!--                    <input type="email" class="form-control" name="email">-->
-    <!--                    <small id="emailHelp" class="form-text text-muted">Where do we email you.</small>-->
-    <!--                </div>-->
+        <div class="row featurette">
+            <div class="col-md-7">
+                <h2 class="featurette-heading">First featurette heading. <span
+                        class="text-muted">It’ll blow your mind.</span></h2>
+                <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis
+                    euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus,
+                    tellus ac cursus commodo.</p>
+            </div>
+            <div class="col-md-5">
+                <img class="myImage img-fluid" src="/images/soccer-stadium-1.jpg">
+            </div>
+        </div>
 
-    <!--                <button type="submit" class="btn btn-primary">Submit</button>-->
-    <!--            </form>-->
-    <!--        </div>-->
-    <!--        <div class="col-6">-->
-    <!--            <h2>Names</h2>-->
-    <!--            <table class="table">-->
-    <!--                <thead>-->
-    <!--                <tr>-->
-    <!--                    <th>First name</th>-->
-    <!--                    <th>Last name</th>-->
-    <!--                    <th>Email</th>-->
-    <!--                </tr>-->
-    <!--                </thead>-->
-        <!--                {{#each people}}-->
-    <!--                    <tr>-->
-    <!--                        <td>{{firstName}}</td>-->
-    <!--                        <td>{{lastName}}</td>-->
-    <!--                        <td>{{email}}</td>-->
-    <!--                    </tr>-->
-        <!--                {{/each}}-->
-    <!--            </table>-->
-    <!--        </div>-->
-    <!--    </div>-->
+        <hr class="featurette-divider">
 
-    <!--    <hr>-->
+        <div class="row featurette">
+            <div class="col-md-7 order-md-2">
+                <h2 class="featurette-heading">Oh yeah, it’s that good. <span
+                        class="text-muted">See for yourself.</span></h2>
+                <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis
+                    euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus,
+                    tellus ac cursus commodo.</p>
+            </div>
+            <div class="col-md-5 order-md-1">
+                <img class="myImage img-fluid" src="/images/soccer-stadium-1.jpg">
+            </div>
+        </div>
 
-    <!--    {{> footer.handlebars}}-->
+        <hr class="featurette-divider">
 
-    <!--    <hr>-->
+        <div class="row featurette">
+            <div class="col-md-7">
+                <h2 class="featurette-heading">And lastly, this one. <span class="text-muted">Checkmate.</span></h2>
+                <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis
+                    euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus,
+                    tellus ac cursus commodo.</p>
+            </div>
+            <div class="col-md-5">
+                <img class="myImage img-fluid" src="/images/soccer-stadium-1.jpg">
+            </div>
+        </div>
 
-    <!--    <div class="row" >-->
+        <hr class="featurette-divider">
 
-    <!--        <div class="col-12" >-->
-    <!--            <h2>Links to UI libraries</h2>-->
-    <!--            <ul>-->
-    <!--                <li><a href="https://www.chartjs.org/"> chart.js </a></li>-->
-    <!--                <li><a href="https://getbootstrap.com/"> Bootstrap CSS </a></li>-->
-    <!--                <li><a href="https://getbootstrap.com/docs/4.5/examples/"> Bootstrap Templates </a></li>-->
-    <!--            </ul>-->
-    <!--        </div>-->
-    <!--    </div>-->
+        <!-- /END THE FEATURETTES -->
 
-</div>
+    </div><!-- /.container -->
 
-</body>
-</html>
+
+    <!-- FOOTER -->
+    <footer class="container">
+        <!--        <p class="float-right"><a href="#navbarCollapse">Back to top</a></p>-->
+        <p>&copy; Hucktions Athletic Football Club , Inc. &middot; <a href="/privacy">Privacy</a> &middot; <a
+                href="/terms">Terms</a></p>
+    </footer>
+</main>
+
+<!--</body>-->
+<!--</html>-->
