--- a/src/main/resources/templates/fixtures.handlebars
+++ b/src/main/resources/templates/fixtures.handlebars
@@ -9,7 +9,7 @@
             </div>
             <div class="card-body">
                 <h5 class="card-title">Hucktions Athletics  vs Arsenal</h5>
-                <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                <p class="card-text">Venue: CodeX Trafford</p>
             </div>
             <div class="card-footer text-muted">
                 Date: 27 September 2020
