--- a/src/main/resources/templates/index.handlebars
+++ b/src/main/resources/templates/index.handlebars
@@ -11,10 +11,9 @@
                 <img class="myImage" src="/images/carousel-1.jpg">
                 <div class="container">
                     <div class="carousel-caption text-left">
-                        <h1>Example headline.</h1>
-                        <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta
-                            gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-                        <p><a class="btn btn-lg btn-primary" href="/fixtures" role="button">Upcoming Games</a></p>
+                        <h1>Fixtures List.</h1>
+                        <p>See the list of upcoming opponents</p>
+                        <p><a class="btn btn-lg btn-primary" href="/fixtures" role="button">View Fixtures</a></p>
                     </div>
                 </div>
             </div>
