--- a/src/main/resources/templates/gallery.handlebars
+++ b/src/main/resources/templates/gallery.handlebars
@@ -1,1 +1,6 @@
 {{> header.handlebars}}
+<main role="main">
+    <div class="image-box float-left">
+        <img src="/images/soccer-stadium-1.jpg" class="img-fluid" alt="...">
+    </div>
+</main>
