--- a/src/main/resources/templates/staff.handlebars
+++ b/src/main/resources/templates/staff.handlebars
@@ -2,15 +2,19 @@
 <main role="main">
     <div class="container my-4">
         <h1>Staff</h1>
-        <div class="box-btn">
-            <a class="" href="/add">
-                <h2>Register Player</h2>
+        <div class="card box-btn">
+            <a class="anchors" href="/add">
+                <h2>Register New Player</h2>
             </a>
         </div>
-        <div class="box-btn">
-            <a href="/players">
-<!--                <img src="..." class="img-fluid" alt="View All Players">-->
+        <div class="card box-btn">
+            <a class="anchors"  href="/players">
                 <h2>View All Players</h2>
+            </a>
+        </div>
+        <div class="card box-btn">
+            <a  class="anchors" href="/fixtures">
+                <h2>View Upcoming Fixtures</h2>
             </a>
         </div>
     </div>
