--- a/src/main/resources/templates/players.handlebars
+++ b/src/main/resources/templates/players.handlebars
@@ -43,7 +43,7 @@
                                             <td><input type="checkbox" aria-label="Checkbox for following text input"></td>
                                             <td>
                                                 <a href="/edit/{{id}}" type="button" class="btn btn-primary mr-3">Update</a>
-                                                <button type="button" class="btn btn-danger">RemmanagementServicesove</button>
+<!--                                                <button type="button" class="btn btn-danger">delete</button>-->
                                             </td>
                                         </tr>
                                     {{/each}}
