--- a/src/main/resources/templates/fixtures.handlebars
+++ b/src/main/resources/templates/fixtures.handlebars
@@ -1,8 +1,7 @@
 {{>header.handlebars}}
 <main role="main">
     <div class="container my-4">
-        <h1>Upcoming Fixtures</h1>
-
+        <h3>Schedule</h3>
         <div class="card text-center">
             <div class="card-header">
                 Premier League
