--- a/src/main/resources/templates/index.handlebars
+++ b/src/main/resources/templates/index.handlebars
@@ -8,22 +8,22 @@
         </ol>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img class="myImage" src="/images/carousel-1.jpg">
+                <img class="myImage" src="/images/carousel-3.jpg">
                 <div class="container">
                     <div class="carousel-caption text-left">
-                        <h1>Fixtures List.</h1>
-                        <p>See the list of upcoming opponents</p>
-                        <p><a class="btn btn-lg btn-primary" href="/fixtures" role="button">View Fixtures</a></p>
+                        <h1 class="text-light">Fixtures List</h1>
+                        <p class="text-light">Plan strategies view next opponents </p>
+                        <p><a class="btn btn-lg btn-primary" href="/fixtures" role="button">Next Fixtures</a></p>
                     </div>
                 </div>
             </div>
             <div class="carousel-item">
-                <img class="myImage img-fluid" src="/images/carousel-2.jpg">
+                <img class="myImage img-fluid" src="/images/team.jpg">
                 <div class="container">
                     <div class="carousel-caption">
-                        <h1>Team Selection</h1>
-                        <p>Select Your team for next match</p>
-                        <p><a class="btn btn-lg btn-primary" href="/players" role="button">Select Squad</a></p>
+                        <h1 class="text-dark">Team Selection</h1>
+                        <p class="text-dark">Select Your team for next match</p>
+                        <p><a class="btn btn-lg btn-primary" href="/players" role="button">Squad</a></p>
                     </div>
                 </div>
             </div>
@@ -47,90 +47,90 @@
         </a>
     </div>
 
-    <!-- Marketing messaging and featurettes
-    ================================================== -->
-    <!-- Wrap the rest of the page in another container to center all the content. -->
+<!--    &lt;!&ndash; Marketing messaging and featurettes-->
+<!--    ================================================== &ndash;&gt;-->
+<!--    &lt;!&ndash; Wrap the rest of the page in another container to center all the content. &ndash;&gt;-->
 
-    <div class="container marketing">
+<!--    <div class="container marketing">-->
 
-        <!-- Three columns of text below the carousel -->
-        <div class="row">
-            <div class="col-lg-4">
-                <img class="myImage img-fluid" src="/images/soccer-stadium-1.jpg">
-                <h2>Heading</h2>
-                <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies
-                    vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo
-                    cursus magna.</p>
-                <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
-            </div><!-- /.col-lg-4 -->
-            <div class="col-lg-4">
-                <img class="myImage img-fluid" src="/images/soccer-stadium-1.jpg">
-                <h2>Heading</h2>
-                <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras
-                    mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris
-                    condimentum nibh.</p>
-                <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
-            </div><!-- /.col-lg-4 -->
-            <div class="col-lg-4">
-                <img class="myImage img-fluid" src="/images/soccer-stadium-1.jpg">
-                <h2>Heading</h2>
-                <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula
-                    porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh,
-                    ut fermentum massa justo sit amet risus.</p>
-                <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
-            </div><!-- /.col-lg-4 -->
-        </div><!-- /.row -->
+<!--        &lt;!&ndash; Three columns of text below the carousel &ndash;&gt;-->
+<!--        <div class="row">-->
+<!--            <div class="col-lg-4">-->
+<!--                <img class="myImage img-fluid" src="/images/soccer-stadium-1.jpg">-->
+<!--                <h2>Heading</h2>-->
+<!--                <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies-->
+<!--                    vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo-->
+<!--                    cursus magna.</p>-->
+<!--                <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>-->
+<!--            </div>&lt;!&ndash; /.col-lg-4 &ndash;&gt;-->
+<!--            <div class="col-lg-4">-->
+<!--                <img class="myImage img-fluid" src="/images/soccer-stadium-1.jpg">-->
+<!--                <h2>Heading</h2>-->
+<!--                <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras-->
+<!--                    mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris-->
+<!--                    condimentum nibh.</p>-->
+<!--                <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>-->
+<!--            </div>&lt;!&ndash; /.col-lg-4 &ndash;&gt;-->
+<!--            <div class="col-lg-4">-->
+<!--                <img class="myImage img-fluid" src="/images/soccer-stadium-1.jpg">-->
+<!--                <h2>Heading</h2>-->
+<!--                <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula-->
+<!--                    porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh,-->
+<!--                    ut fermentum massa justo sit amet risus.</p>-->
+<!--                <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>-->
+<!--            </div>&lt;!&ndash; /.col-lg-4 &ndash;&gt;-->
+<!--        </div>&lt;!&ndash; /.row &ndash;&gt;-->
 
 
-        <!-- START THE FEATURETTES -->
+<!--        &lt;!&ndash; START THE FEATURETTES &ndash;&gt;-->
 
-        <hr class="featurette-divider">
+<!--        <hr class="featurette-divider">-->
 
-        <div class="row featurette">
-            <div class="col-md-7">
-                <h2 class="featurette-heading">First featurette heading. <span
-                        class="text-muted">It’ll blow your mind.</span></h2>
-                <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis
-                    euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus,
-                    tellus ac cursus commodo.</p>
-            </div>
-            <div class="col-md-5">
-                <img class="myImage img-fluid" src="/images/soccer-stadium-1.jpg">
-            </div>
-        </div>
+<!--        <div class="row featurette">-->
+<!--            <div class="col-md-7">-->
+<!--                <h2 class="featurette-heading">First featurette heading. <span-->
+<!--                        class="text-muted">It’ll blow your mind.</span></h2>-->
+<!--                <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis-->
+<!--                    euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus,-->
+<!--                    tellus ac cursus commodo.</p>-->
+<!--            </div>-->
+<!--            <div class="col-md-5">-->
+<!--                <img class="myImage img-fluid" src="/images/soccer-stadium-1.jpg">-->
+<!--            </div>-->
+<!--        </div>-->
 
-        <hr class="featurette-divider">
+<!--        <hr class="featurette-divider">-->
 
-        <div class="row featurette">
-            <div class="col-md-7 order-md-2">
-                <h2 class="featurette-heading">Oh yeah, it’s that good. <span
-                        class="text-muted">See for yourself.</span></h2>
-                <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis
-                    euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus,
-                    tellus ac cursus commodo.</p>
-            </div>
-            <div class="col-md-5 order-md-1">
-                <img class="myImage img-fluid" src="/images/soccer-stadium-1.jpg">
-            </div>
-        </div>
+<!--        <div class="row featurette">-->
+<!--            <div class="col-md-7 order-md-2">-->
+<!--                <h2 class="featurette-heading">Oh yeah, it’s that good. <span-->
+<!--                        class="text-muted">See for yourself.</span></h2>-->
+<!--                <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis-->
+<!--                    euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus,-->
+<!--                    tellus ac cursus commodo.</p>-->
+<!--            </div>-->
+<!--            <div class="col-md-5 order-md-1">-->
+<!--                <img class="myImage img-fluid" src="/images/soccer-stadium-1.jpg">-->
+<!--            </div>-->
+<!--        </div>-->
 
-        <hr class="featurette-divider">
+<!--        <hr class="featurette-divider">-->
 
-        <div class="row featurette">
-            <div class="col-md-7">
-                <h2 class="featurette-heading">And lastly, this one. <span class="text-muted">Checkmate.</span></h2>
-                <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis
-                    euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus,
-                    tellus ac cursus commodo.</p>
-            </div>
-            <div class="col-md-5">
-                <img class="myImage img-fluid" src="/images/soccer-stadium-1.jpg">
-            </div>
-        </div>
+<!--        <div class="row featurette">-->
+<!--            <div class="col-md-7">-->
+<!--                <h2 class="featurette-heading">And lastly, this one. <span class="text-muted">Checkmate.</span></h2>-->
+<!--                <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis-->
+<!--                    euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus,-->
+<!--                    tellus ac cursus commodo.</p>-->
+<!--            </div>-->
+<!--            <div class="col-md-5">-->
+<!--                <img class="myImage img-fluid" src="/images/soccer-stadium-1.jpg">-->
+<!--            </div>-->
+<!--        </div>-->
 
-        <hr class="featurette-divider">
+<!--        <hr class="featurette-divider">-->
 
-        <!-- /END THE FEATURETTES -->
+<!--        &lt;!&ndash; /END THE FEATURETTES &ndash;&gt;-->
 
     </div><!-- /.container -->
 
