--- a/src/main/resources/templates/register.handlebars
+++ b/src/main/resources/templates/register.handlebars
@@ -51,9 +51,9 @@
                     <div class="form-group">
                       <select class="form-control" name="position" style="width: 48%;">
                         <option>GK</option>
-                        <option>DF</option>
-                        <option>MF</option>
-                        <option>FWD</option>
+                        <option>DEF</option>
+                        <option>MID</option>
+                        <option>ATT</option>
                       </select>
                     </div>
                  </div>
