--- a/src/main/resources/templates/staff.handlebars
+++ b/src/main/resources/templates/staff.handlebars
@@ -1,21 +1,37 @@
 {{>header.handlebars}}
 <main role="main">
     <div class="container my-4">
-        <h1>Staff</h1>
+        <h2>Personnel Options</h2>
+        <div class="card box-btn">
+            <a class="anchors" href="/selected">
+                <h2>Selected Players</h2>
+            </a>
+        </div>
         <div class="card box-btn">
             <a class="anchors" href="/add">
-                <h2>Register New Player</h2>
+                <h2>Register Player</h2>
             </a>
         </div>
         <div class="card box-btn">
-            <a class="anchors"  href="/players">
-                <h2>View All Players</h2>
+            <a class="anchors" href="/players">
+                <h2>Squad Members</h2>
             </a>
         </div>
         <div class="card box-btn">
-            <a  class="anchors" href="/fixtures">
-                <h2>View Upcoming Fixtures</h2>
+            <a class="anchors" href="/fixtures">
+                <h2>Fixture List</h2>
             </a>
         </div>
+        <div class="card box-btn">
+            <a class="anchors" href="/bookings">
+                <h2>Bookings</h2>
+            </a>
+        </div>
+        <div class="card box-btn">
+            <a class="anchors" href="/gallery">
+                <h2>Gallery</h2>
+            </a>
+        </div>
+
     </div>
 </main>
