--- a/src/main/resources/public/css/index.css
+++ b/src/main/resources/public/css/index.css
@@ -12,11 +12,16 @@ body {
     background-color:#777;
     color:#777;
 }
-.anchors{
-padding:20px;
-    color:#00A0C6;
+.anchors,a{
+
+    padding:20px;
+    color:inherit;
     text-decoration:none;
     cursor:pointer;
+}
+.anchors,h2{
+    font-size:8px;
+    text-decoration:none;
 }
 .box-btn{
     margin:30px;
