--- a/src/main/resources/templates/header.handlebars
+++ b/src/main/resources/templates/header.handlebars
@@ -38,10 +38,13 @@
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="/dashboard">Dashboard <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="/dashboard">Club Panel <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/staff">Staff</a>
+                    <a class="nav-link" href="/staff">Club Personnel</a>
+                </li>
+                <li class="nav-item">
+
                 </li>
             </ul>
 
